--- a/garden-shop/dev/components/cabinet/cabinet.html
+++ b/garden-shop/dev/components/cabinet/cabinet.html
@@ -10,7 +10,7 @@
                 <div class="gray-text">01 мая 1990</div>
                 <div class="gray-text">Пол не указан</div>
                 <div class="gray-text">Физическое лицо</div>
-                <a href="#popup" data-fancybox class="orange-text">Изменить</a>
+                <a href="#popup-user" data-fancybox class="orange-text">Изменить</a>
             </div>
             <div class="cabinet__row">
                 <div class="cabinet__col">
@@ -19,7 +19,16 @@
                         <div class="bold">
                             +7 999 999-99-99
                         </div>
-                        <div class="cabinet-state">
+                    </div>
+                    <a href="#popup" data-fancybox class="orange-text">Изменить</a>
+                </div>
+                <div class="cabinet__col">
+                    <div class="caption-large gray-text">Почта</div>
+                    <div class="cabinet__contact-info">
+                        <div class="bold">
+                            mymail@mail.ru
+                        </div>
+                        <div class="cabinet-state caption-large">
                             <svg width="20" height="20" viewBox="0 0 20 20" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -30,10 +39,26 @@
                             </svg>
                             Почта подтверждена
                         </div>
+                        <!-- <div class="cabinet-state cabinet-state_false caption-large">
+                            <svg width="20" height="20" viewBox="0 0 20 20" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M2.5 5.83333C2.5 3.99238 3.99238 2.5 5.83333 2.5H14.1667C16.0076 2.5 17.5 3.99238 17.5 5.83333V14.1667C17.5 16.0076 16.0076 17.5 14.1667 17.5H5.83333C3.99238 17.5 2.5 16.0076 2.5 14.1667V5.83333Z"
+                                    stroke="#FFC700" stroke-width="0.833333" />
+                                <path d="M6.66797 10H13.3346" stroke="#FFC700" stroke-width="0.833333"
+                                    stroke-linecap="round" />
+                            </svg>
+                            Почта не подтверждена
+                        </div> -->
                     </div>
                     <a href="#popup" data-fancybox class="orange-text">Изменить</a>
                 </div>
             </div>
+            <div class="cabinet__history">
+                <div class="cabinet__subtitle subtitle">Управление аккаунтом</div>
+                <div class="gray-text">Вы зарегистрированы в системе 01 декабря 2022 года</div>
+            </div>
+            <a href="#popup" data-fancybox class="orange-text">Выйти из аккаунта</a>
         </div>
     </div>
 </div>
