--- a/garden-shop/dev/components/footer/footer.html
+++ b/garden-shop/dev/components/footer/footer.html
@@ -174,6 +174,19 @@
     </div>
 </div>
 
+<div class="popup" id="popup-user">
+    <div class="popup__title orange-bg white-text demibold">Личные данные</div>
+    <div class="popup__body">
+        <div class="input">
+            <input type="text" class="input__field" placeholder="Фамилия Имя Отчество" required>
+        </div>
+        <div class="input">
+            <input type="date" class="input__field" value="1990-01-01" min="1920-01-01" required>
+        </div>
+        <div class="vanilla-calendar"></div>
+    </div>
+</div>
+
 </body>
 
 </html>
