--- a/garden-shop/dev/components/cabinet/cabinet.scss
+++ b/garden-shop/dev/components/cabinet/cabinet.scss
@@ -9,8 +9,52 @@
         height: 300px;
         border-radius: 5px;
         overflow: hidden;
+        position: relative;
+        overflow: hidden;
         & img {
             width: 100%;
+        }
+        &:hover {
+            & .cabinet {
+                &__photo-change {
+                    opacity: 1;
+                    pointer-events: all;
+                }
+            }
+        }
+    }
+    &__photo-change {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(255, 255, 255, 0.8);
+        transition: all ease 0.5s;
+        opacity: 0;
+        pointer-events: none;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+    }
+    &__photo-btn-icon {
+        display: block;
+        width: 24px;
+        height: 24px;
+        mask-position: center;
+        mask-size: contain;
+        mask-repeat: no-repeat;
+        background-color: #212121;
+    }
+    &__photo-btn {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        cursor: pointer;
+        & input[type="file"] {
+            display: none;
         }
     }
     &__name {
