--- a/garden-shop/dev/components/detail-block/detail-block.html
+++ b/garden-shop/dev/components/detail-block/detail-block.html
@@ -30,7 +30,8 @@
                 <div class="detail-block__slider swiper">
                     <div class="detail-block__stickers">
                         <div class="detail-block__sticker orange-text  demibold">-00%</div>
-                        <div class="detail-block__sticker detail-block__sticker_green green-text demibold">3D</div>
+                        <div class="detail-block__sticker detail-block__sticker_green green-text demibold btn-3d">
+                            3D</div>
                     </div>
                     <div class="detail-block__slider-wrapper swiper-wrapper">
                         <div class="detail-block__slide swiper-slide">
