--- a/garden-shop/dev/style/scss/main.scss
+++ b/garden-shop/dev/style/scss/main.scss
@@ -602,6 +602,7 @@ body {
 				&__list {
 					position: static;
 					opacity: 1;
+					pointer-events: all;
 				}
 			}
 		}
@@ -1200,6 +1201,45 @@ body {
 		grid-template-columns: 2fr 10fr;
 		gap: 30px;
 	}
+}
+
+.video-link {
+	position: relative;
+	display: flex;
+	width: 100%;
+	height: 100%;
+	& img {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+		object-position: center;
+	}
+	&__play {
+		position: absolute;
+		left: 50%;
+		top: 50%;
+		transform: translate(-50%, -50%);
+		width: 11.95%;
+		height: 21.05%;
+		min-width: 60px;
+		min-height: 60px;
+		transition: all ease 0.5s;
+		& svg {
+			width: 100%;
+			height: 100%;
+		}
+	}
+	&:hover {
+		& .video-link {
+			&__play {
+				transform: translate(-50%, -50%) scale(1.1);
+			}
+		}
+	}
+}
+
+.btn-3d {
+	cursor: pointer;
 }
 
 @media (max-width: 1650px) {
