--- a/garden-shop/release/components/cabinet/cabinet.css
+++ b/garden-shop/release/components/cabinet/cabinet.css
@@ -8,9 +8,49 @@
   height: 300px;
   border-radius: 5px;
   overflow: hidden;
+  position: relative;
+  overflow: hidden;
 }
 .cabinet__photo img {
   width: 100%;
+}
+.cabinet__photo:hover .cabinet__photo-change {
+  opacity: 1;
+  pointer-events: all;
+}
+.cabinet__photo-change {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.8);
+  transition: all ease 0.5s;
+  opacity: 0;
+  pointer-events: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+.cabinet__photo-btn-icon {
+  display: block;
+  width: 24px;
+  height: 24px;
+  mask-position: center;
+  mask-size: contain;
+  mask-repeat: no-repeat;
+  background-color: #212121;
+}
+.cabinet__photo-btn {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  cursor: pointer;
+}
+.cabinet__photo-btn input[type=file] {
+  display: none;
 }
 .cabinet__name {
   margin-bottom: 10px;
