--- a/garden-shop/release/components/cabinet/cabinet.html
+++ b/garden-shop/release/components/cabinet/cabinet.html
@@ -3,6 +3,19 @@
     <div class="cabinet__body">
         <div class="cabinet__photo">
             <img src="./images/user_avatar.png" alt="photo">
+            <div class="cabinet__photo-change">
+                <a href="" class="cabinet__photo-btn">
+                    <span class="cabinet__photo-btn-icon"
+                        style="-webkit-mask-image:url('./images/icons/cabinet-3.svg')"></span>
+                    Сделать фото
+                </a>
+                <label class="cabinet__photo-btn">
+                    <span class="cabinet__photo-btn-icon"
+                        style="-webkit-mask-image:url('./images/icons/cabinet-3.svg')"></span>
+                    <input type="file" accept="image/*">
+                    Загрузить фото
+                </label>
+            </div>
         </div>
         <div class="cabinet__content">
             <div class="cabinet__name title">Константинопольский Константин Константинович</div>
