--- a/garden-shop/release/css/main.css
+++ b/garden-shop/release/css/main.css
@@ -563,6 +563,7 @@ body {
   .dropdown_sidebar .dropdown__list {
     position: static;
     opacity: 1;
+    pointer-events: all;
   }
 }
 .main {
@@ -1115,6 +1116,41 @@ body {
   display: grid;
   grid-template-columns: 2fr 10fr;
   gap: 30px;
+}
+
+.video-link {
+  position: relative;
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+.video-link img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+.video-link__play {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 11.95%;
+  height: 21.05%;
+  min-width: 60px;
+  min-height: 60px;
+  transition: all ease 0.5s;
+}
+.video-link__play svg {
+  width: 100%;
+  height: 100%;
+}
+.video-link:hover .video-link__play {
+  transform: translate(-50%, -50%) scale(1.1);
+}
+
+.btn-3d {
+  cursor: pointer;
 }
 
 @media (max-width: 1650px) {
