--- a/garden-shop/dev/components/header/header.scss
+++ b/garden-shop/dev/components/header/header.scss
@@ -223,7 +223,7 @@
     &__list {
         display: flex;
         gap: 15px;
-        justify-content: space-between;
+        justify-content: space-evenly;
         padding: 11px 15px;
         background-color: #fff;
         border-top: 1px solid #ebebeb;
