--- a/garden-shop/release/css/style-result.css
+++ b/garden-shop/release/css/style-result.css
@@ -2004,6 +2004,11 @@ body {
   background-image: url(../images/icons/state_false.svg);
 }
 
+.card-state_order {
+  background-image: url(../images/icons/Add_rectangle.svg);
+  color: #ffc700;
+}
+
 .card__img {
   margin-top: 40px;
   display: flex;
@@ -2295,6 +2300,41 @@ body {
   max-width: 260px;
 }
 
+.card__compare-fix {
+  width: 24px;
+  height: 24px;
+  -webkit-mask-image: url(../images/icons/icon_pin.svg);
+  mask-image: url(../images/icons/icon_pin.svg);
+  -webkit-mask-position: center;
+  mask-position: center;
+  -webkit-mask-size: contain;
+  mask-size: contain;
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  background-color: #c9c8d3;
+  position: absolute;
+  left: 15px;
+  top: 15px;
+  cursor: pointer;
+}
+
+.card__compare-fix_fixed {
+  background-color: #33b939;
+}
+
+.card__close {
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  cursor: pointer;
+}
+
+.card__mobile-elem {
+  display: none;
+}
+
 .catalog__wrapper {
   display: grid;
   grid-template-columns: 360px auto;
@@ -2517,6 +2557,118 @@ body {
 
 .category__slider-container {
   position: relative;
+}
+
+.compare__dropdown {
+  width: 100%;
+  max-width: 360px;
+}
+
+.compare__dropdown .dropdown__title {
+  padding: 14px 15px;
+  padding-right: 50px;
+  background: #ffffff;
+  border: 1px solid #ebebeb;
+  border-radius: 4px;
+}
+
+.compare__dropdown .dropdown__caret {
+  right: 15px;
+}
+
+.compare__header {
+  display: flex;
+  gap: 30px;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+.compare__remove-btn {
+  margin-left: auto;
+}
+
+.compare__slide {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.compare__add-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  height: auto;
+  cursor: pointer;
+  background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='5' ry='5' stroke='%23EBEBEBFF' stroke-width='2' stroke-dasharray='20%2c 30' stroke-dashoffset='19' stroke-linecap='square'/%3e%3c/svg%3e");
+  border-radius: 5px;
+  height: 396px;
+  width: 360px;
+  min-height: 300px;
+  min-width: 190px;
+}
+
+.compare__add-card-icon {
+  width: 50px;
+  height: 50px;
+}
+
+.compare__add-card-icon svg {
+  width: 100%;
+  height: 100%;
+}
+
+.compare__add-card-text {
+  width: 100%;
+  max-width: 160px;
+  text-align: center;
+}
+
+.compare__slider-holder {
+  position: relative;
+  display: flex;
+}
+
+.compare__subslider-holder {
+  position: relative;
+  display: flex;
+}
+
+.compare__slider {
+  position: static;
+  margin: 0;
+  padding-bottom: 25px;
+}
+
+.compare__subslider {
+  margin: 0;
+}
+
+.compare__subtitle {
+  margin-bottom: 10px;
+}
+
+.compare__subslide {
+  width: 360px;
+}
+
+.compare__subslide-text {
+  padding: 15px 20px;
+  background: #f7f8fb;
+}
+
+.compare__table {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.compare__scrollbar {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  margin: 0;
 }
 
 .default-slider {
@@ -3152,7 +3304,7 @@ body {
 .menu__list {
   display: flex;
   gap: 15px;
-  justify-content: space-between;
+  justify-content: space-evenly;
   padding: 11px 15px;
   background-color: #fff;
   border-top: 1px solid #ebebeb;
@@ -4683,6 +4835,15 @@ body {
     flex-direction: column;
   }
 
+  .card__mobile-elem {
+    display: flex;
+    margin-top: 10px;
+  }
+
+  .card__compare-fix {
+    display: none;
+  }
+
   .card_kit {
     height: auto;
     width: 360px;
@@ -4762,6 +4923,28 @@ body {
   .catalog-list__wrapper {
     grid-template-columns: 1fr 1fr;
     gap: 15px;
+  }
+
+  .compare .card {
+    width: 100%;
+    height: 100%;
+  }
+
+  .compare__subslide {
+    width: 100%;
+  }
+
+  .compare__slide {
+    height: 100%;
+  }
+
+  .compare__header {
+    flex-wrap: wrap;
+    gap: 20px;
+  }
+
+  .compare__dropdown {
+    max-width: none;
   }
 
   .footer__nav-list {
@@ -4884,6 +5067,22 @@ body {
 
   .card__kit-price {
     padding: 15px;
+  }
+
+  .compare .card__price-difference {
+    display: none;
+  }
+
+  .compare .card__old-price {
+    display: none;
+  }
+
+  .compare .card__mid {
+    display: none;
+  }
+
+  .compare .card__basket {
+    display: none;
   }
 }
 
