--- a/garden-shop/dev/style/scss/main.scss
+++ b/garden-shop/dev/style/scss/main.scss
@@ -71,6 +71,18 @@ body {
 	margin-bottom: 40px;
 }
 
+.mt-10 {
+	margin-top: 10px;
+}
+
+.mt-20 {
+	margin-top: 20px;
+}
+
+.pl-40 {
+	padding-left: 40px !important;
+}
+
 @media (max-width: 570px) {
 	.content h2,
 	.title {
@@ -299,6 +311,7 @@ body {
 		height: 20px;
 		border: 1px solid #e25b26;
 		border-radius: 50%;
+		background-color: #fff;
 		&::after {
 			display: block;
 			content: "";
@@ -311,6 +324,29 @@ body {
 			transform: translate(-50%, -50%);
 			opacity: 0;
 			background-color: #212121;
+		}
+	}
+	&__img {
+		margin-bottom: 12px;
+		border-radius: 5px;
+		overflow: hidden;
+		height: 150px;
+		background-color: #d9d9d9;
+		& img {
+			height: 100%;
+			width: 100%;
+			object-fit: cover;
+			object-position: center;
+		}
+	}
+	&_img {
+		width: 100%;
+		padding: 0;
+		& .radio {
+			&__checkmark {
+				left: 15px;
+				top: 15px;
+			}
 		}
 	}
 }
@@ -1230,6 +1266,17 @@ body {
 		grid-template-columns: 2fr 10fr;
 		gap: 30px;
 	}
+	&_right .block-with-sidebar__wrapper {
+		grid-template-columns: 10fr 2fr;
+	}
+	&_4col {
+		& .block-with-sidebar__wrapper {
+			grid-template-columns: 4fr 8fr;
+		}
+		&.block-with-sidebar_right .block-with-sidebar__wrapper {
+			grid-template-columns: 8fr 4fr;
+		}
+	}
 }
 
 .video-link {
@@ -1460,6 +1507,122 @@ body {
 	}
 }
 
+.counter {
+	background: #f7f8fb;
+	border-radius: 5px;
+	padding: 5px;
+	display: flex;
+	align-items: center;
+	width: fit-content;
+	gap: 10px;
+	&__btn {
+		background: #124144;
+		border-radius: 5px;
+		cursor: pointer;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		width: 30px;
+		height: 30px;
+	}
+	&__input {
+		width: 40px;
+		text-align: center;
+		font-feature-settings: "pnum" on, "lnum" on;
+		background-color: transparent;
+		&::-webkit-outer-spin-button,
+		&::-webkit-inner-spin-button {
+			-webkit-appearance: none;
+			margin: 0;
+		}
+		-moz-appearance: textfield;
+	}
+}
+
+.order-info {
+	background: #ffffff;
+	border: 1px solid #ebebeb;
+	border-radius: 5px;
+	height: fit-content;
+	position: sticky;
+	top: 156px;
+	&__top {
+		padding: 30px;
+		padding-bottom: 20px;
+		border-bottom: 1px solid #ebebeb;
+	}
+	&__body {
+		padding: 30px;
+		padding-top: 20px;
+	}
+	&__col {
+		background-color: #fff;
+		&:first-child {
+			padding-right: 5px;
+		}
+		&:last-child {
+			padding-left: 5px;
+		}
+	}
+	&__row {
+		display: flex;
+		justify-content: space-between;
+		margin-bottom: 10px;
+		&:last-child {
+			margin-bottom: 0;
+		}
+		&:first-child {
+			margin-top: 0;
+		}
+		&_sum {
+			position: relative;
+			z-index: 1;
+			margin-top: 20px;
+			&::after {
+				display: block;
+				content: "";
+				width: 100%;
+				height: 18px;
+				position: absolute;
+				bottom: 5px;
+				left: 0;
+				background-image: url(../images/icons/doted-line.svg);
+				background-position: center;
+				background-size: contain;
+				z-index: -1;
+			}
+		}
+	}
+}
+
+.accordion_v3 {
+	& .a-btn {
+		border-radius: 5px 5px 0px 0px;
+		padding: 19px 30px;
+		cursor: pointer;
+		display: flex;
+		justify-content: space-between;
+	}
+	& .a-panel {
+		max-height: 0;
+		overflow: hidden;
+		transition: all ease 0.5s;
+		display: flex;
+		flex-direction: column;
+		gap: 20px;
+		padding: 0 30px;
+	}
+	& .a-container {
+		border: 1px solid #ebebeb;
+		border-radius: 5px;
+		overflow: hidden;
+		&_open .a-panel {
+			margin: 30px 0;
+			max-height: 5000px;
+		}
+	}
+}
+
 @media (max-width: 1650px) {
 	.slider-navigation {
 		display: none;
@@ -1540,6 +1703,18 @@ body {
 	.popup-info {
 		bottom: 100px;
 	}
+	.block-with-sidebar {
+		&_4col .block-with-sidebar__wrapper {
+			display: flex;
+			flex-direction: column;
+		}
+		&_right .block-with-sidebar__wrapper {
+			flex-direction: column-reverse;
+		}
+	}
+	.order-info {
+		position: static;
+	}
 }
 
 @media (max-width: 1024px) {
@@ -1599,6 +1774,16 @@ body {
 		&__table-full-mobile {
 			& br {
 				display: none;
+			}
+		}
+	}
+	.accordion_v3 {
+		& .a-panel {
+			padding: 0 15px;
+		}
+		& .a-container {
+			&_open .a-panel {
+				margin: 15px 0;
 			}
 		}
 	}
@@ -1676,6 +1861,28 @@ body {
 		}
 		&__search-input {
 			max-width: none;
+		}
+	}
+	.order-info {
+		&__top {
+			padding: 15px;
+			padding-bottom: 20px;
+		}
+		&__body {
+			padding: 15px;
+			padding-top: 20px;
+		}
+		&__row_header {
+			flex-direction: column;
+			align-items: center;
+			gap: 10px;
+		}
+	}
+	.accordion_v3 {
+		& .a-btn {
+			flex-direction: column;
+			gap: 10px;
+			padding: 15px;
 		}
 	}
 }
